--- a/apps/frontend/Pages/Shared/Components/Navbar.razor
+++ b/apps/frontend/Pages/Shared/Components/Navbar.razor
@@ -1,4 +1,5 @@
 @using frontend.Pages.Shared.Components.Icons
+@using frontend.Pages.Shared.Components.Storefront
 @using frontend.Services
 @using Microsoft.AspNetCore.Components.Routing
 @inject CustomAuthStateProvider AuthProvider
