--- a/apps/frontend/wwwroot/css/app.css
+++ b/apps/frontend/wwwroot/css/app.css
@@ -101,3 +101,12 @@ a, .btn-link {
 code {
     color: #c02d76;
 }
+
+/*description line truncation - cart card */
+.line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
